Src/Newt/v2/NewtonDynamics/Import/testimport.cs

//            [DllImport("Newton.dll", EntryPoint = "NewtonConvexHullModifierSetMatrix ")]
//            static public extern void ConvexHullModifierSetMatrix(int convexHullCollision, ref Matrix matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateCompoundCollision")]
//            static public extern int CreateCompoundCollision(int newtonWorld, int count, int[] collisionPrimitiveArray);
//            [DllImport("Newton.dll", EntryPoint = "NewtonConvexCollisionSetUserID")]
//            static public extern void ConvexCollisionSetUserID(int newtonWorld, uint id);
//            [DllImport("Newton.dll", EntryPoint = "NewtonConvexCollisionGetUserID")]
//            static public extern uint ConvexCollisionSetUserID(int newtonWorld);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateTreeCollision")]
//            static public extern int CreateTreeCollision(int bodyPtr, CreateTreeCollision cb);
//            [DllImport("Newton.dll", EntryPoint = "NewtonTreeCollisionBeginBuild")]
//            static public extern void TreeCollisionBeginBuild(int treeCollision);
//            [DllImport("Newton.dll", EntryPoint = "NewtonTreeCollisionAddFace")]
//            static public extern void TreeCollisionAddFace(int bodyPtr, int vertexCount, float[] vertexPtr, int strideInBytes, int faceAttribute);
//            [DllImport("Newton.dll", EntryPoint = "NewtonTreeCollisionEndBuild")]
//            static public extern void TreeCollisionEndBuild(int treeCollision, int optimize);
//            [DllImport("Newton.dll", EntryPoint = "NewtonTreeCollisionGetFaceAtribute")]
//            static public extern void TreeCollisionGetFaceAtribute(int treeCollision, int[] faceIndexArray);
//            [DllImport("Newton.dll", EntryPoint = "NewtonReleaseCollision")]
//            static public extern void ReleaseCollision(int newtonWorld, int collisionPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCollisionCalculateAABB")]
//            static public extern void CalculateAABB(int collisionPtr, ref Matrix offsetMatrix, ref Vector3 min, ref Vector3 max);
//            [DllImport("Newton.dll", EntryPoint = "NewtonCollisionRayCast")]
//            static public extern float RayCast(int collisionPtr, ref Vector3 p0, ref Vector3 p1, ref Vector3 Normal, int[] attribute);
//        }
//        static public class Body
//        {
//            [DllImport("Newton.dll", EntryPoint = "NewtonCreateBody")]
//            static public extern int Create(int newtonWorld, int collisionPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetUserData")]
//            static public extern void SetUserData(int bodyPtr, [MarshalAs(UnmanagedType.IUnknown)] object o);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetUserData")]
//            [return: MarshalAs(UnmanagedType.IUnknown)]
//            static public extern object GetUserData(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetWorld")]
//            static public extern int GetWorld(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetTransformCallback")]
//            static public extern void SetTransformCallback(int bodyPtr, SetTransformCB cb);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetForceAndTorqueCallback")]
//            static public extern void SetForceAndTorqueCallback(int bodyPtr, SetForceAndTorqueCB cb);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetMassMatrix")]
//            static public extern void SetMassMatrix(int bodyPtr, float mass, float Ixx, float Iyy, float Izz);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetMassMatrix")]
//            static public extern void GetMassMatrix(int bodyPtr, out float mass, out float Ixx, out float Iyy, out float Izz);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetInvMass")]
//            static public extern void GetInvMass(int bodyPtr, out float mass, out float Ixx, out float Iyy, out float Izz);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetMatrix")]
//            static public extern void SetMatrix(int bodyPtr, ref Matrix matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetMatrixRecursive")]
//            static public extern void SetMatrixRecursive(int bodyPtr, ref Matrix matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetMatrix")]
//            static public extern void GetMatrix(int bodyPtr, ref Matrix matrix);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetForce")]
//            static public extern void SetForce(int bodyPtr, ref Vector3 force);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyAddForce")]
//            static public extern void AddForce(int bodyPtr, ref Vector3 force);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetForce")]
//            static public extern void GetForce(int bodyPtr, ref Vector3 force);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetTorque")]
//            static public extern void SetTorque(int bodyPtr, ref Vector3 torque);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyAddTorque")]
//            static public extern void AddTorque(int bodyPtr, ref Vector3 torque);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetTorque")]
//            static public extern void GetTorque(int bodyPtr, ref Vector3 torque);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetTotalVolume")]
//            static public extern float GetTotalVolume(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyAddBuoyancyForce")]
//            static public extern void AddBuoyancyForce(int bodyPtr, float fluidDensity, float fluidLinearViscosity, float fluidAngularViscosity, float[] gravityVector, int buoyancyPlane);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetCollision")]
//            static public extern void SetCollision(int bodyPtr, int collision);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyCoriolisForcesMode")]
//            static public extern void CoriolisForcesMode(int bodyPtr, int mode);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetCollision")]
//            static public extern int GetCollision(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetMaterialGroupID")]
//            static public extern void SetMaterialGroupID(int bodyPtr, int materialID);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetMaterialGroupID")]
//            static public extern int GetMaterialGroupID(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetJointRecursiveCollision")]
//            static public extern void SetJointRecursiveCollision(int bodyPtr, int state);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetJointRecursiveCollision")]
//            static public extern int GetJointRecursiveCollision(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetAutoFreeze")]
//            static public extern void SetAutoFreeze(int bodyPtr, int state);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetAutoFreeze")]
//            static public extern int GetAutoFreeze(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetSleepingState")]
//            static public extern int GetSleepingState(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetFreezeTreshold")]
//            static public extern void SetFreezeTreshold(int bodyPtr, float freezeSpeedMag2, float freezeOmegaMag2, int framesCount);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetFreezeTreshold")]
//            static public extern void GetFreezeTreshold(int bodyPtr, ref float freezeSpeedMag2, ref float freezeOmegaMag2);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetAABB")]
//            static public extern void GetAABB(int bodyPtr, ref Vector3 min, ref Vector3 max);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetVelocity")]
//            static public extern void SetVelocity(int bodyPtr, ref Vector3 velocity);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetVelocity")]
//            static public extern void GetVelocity(int bodyPtr, ref Vector3 velocity);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetOmega")]
//            static public extern void SetOmega(int bodyPtr, ref Vector3 omega);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetOmega")]
//            static public extern void GetOmega(int bodyPtr, ref Vector3 omega);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetLinearDamping")]
//            static public extern void SetLinearDamping(int bodyPtr, float linearDamp);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetLinearDamping")]
//            static public extern float GetLinearDamping(int bodyPtr);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodySetAngularDamping")]
//            static public extern void SetAngularDamping(int bodyPtr, ref Vector3 angularDamp);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyGetAngularDamping")]
//            static public extern void GetAngularDamping(int bodyPtr, ref Vector3 angularDamp);
//            [DllImport("Newton.dll", EntryPoint = "NewtonBodyForEachPolygonDo")]
//            static public extern void ForEachPolygonDo(int bodyPtr, CollisionIteratorCB cb);
//            [DllImport("Newton.dll", EntryPoint = "NewtonAddBodyImpulse")]
//            static public extern void AddImpulse(int bodyPtr, ref Vector3 pointDeltaVeloc, ref Vector3 pointPosit);
//            [DllImport("Newton.dll", EntryPoint = "NewtonGetEulerAngle ")]
//            static public extern void GetEulerAngle(ref Matrix matrix, ref Vector3 angles);
//            [DllImport("Newton.dll", EntryPoint = "NewtonSetEulerAngle ")]
//            static public extern void SetEulerAngle(ref Matrix matrix, ref Vector3 angles);
//        }
//        static public class Joint
//        {
//            static public class Ball
//            {
//                [DllImport("Newton.dll", EntryPoint = "NewtonConstraintCreateBall")]
//                static public extern int Create(int world, ref Vector3 pivotPoint, int childBody, int parentBody);
//                [DllImport("Newton.dll", EntryPoint = "NewtonBallSetConeLimits")]
//                static public extern void SetConeLimits(int bodyPtr, ref Vector3 pin, float maxConeAngle, float maxTwistAngle);
//                [DllImport("Newton.dll", EntryPoint = "NewtonBallGetJointAngle")]
//                static public extern void GetAngle(int jointPtr, ref Vector3 angle);
//                [DllImport("Newton.dll", EntryPoint = "NewtonBallGetJointOmega")]
//                static public extern void GetOmega(int jointPtr, ref Vector3 omega);
//                [DllImport("Newton.dll", EntryPoint = "NewtonBallGetJointForce")]
//                static public extern void GetForce(int jointPtr, ref Vector3 force);
//            }
//            static public class Hinge
//            {
//                [DllImport("Newton.dll", EntryPoint = "NewtonConstraintCreateHinge")]
//                static public extern int Create(int bodyPtr, ref Vector3 pivotPoint, ref Vector3 pinDir, int childBody, int parentBody);
//                [DllImport("Newton.dll", EntryPoint = "NewtonHingeGetJointAngle")]
//                static public extern float GetAngle(int jointPtr);
//                [DllImport("Newton.dll", EntryPoint = "NewtonHingeGetJointOmega")]
//                static public extern float GetOmega(int jointPtr);
